<resources>
    <string name="app_name">Tìm việc làm</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--login activity-->
    <string name="hint_username">Tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="error_username_password_wrong">Lỗi! Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="notice_requiring_info">Vui lòng điền đầy đủ thông tin</string>


    <!--register activity-->
    <string name="register_account">Đăng ký tài khản</string>
    <string name="register">Đăng ký</string>
    <string name="hint_name">Họ và tên</string>
    <string name="hint_repassword">Nhập lại mật khẩu</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="hint_desc">Giới thiệu</string>


    <!---->
    <string name="hint_searchview">Tên công việc, vị trí ,  ...</string>
    <string name="load_error">Công việc tạm thời không tồn tại</string>

    <!--detail customer activity-->
    <string name="hint_name_displayed">Tên hiển thị</string>
    <string name="hint_email_contact">Email liên hệ</string>
    <string name="hint_phone_contact">Điện thoại liên hệ</string>
    <string name="btn_update_info">Thay đổi</string>
    <string name="btn_change_password">Thay đổi</string>
    <string name="hint_old_password">Mật khẩu cũ</string>
    <string name="hint_new_password">Mật khẩu mới</string>
    <string name="hint_renew_password">Nhập lại mật khẩu mới</string>


    <!--Register job activity-->
    <string-array name="list_exp">
        <item>Không cần kinh nghiệm</item>
        <item>Thực tập sinh</item>
        <item>Dưới 1 năm</item>
        <item>1 - 2 năm </item>
        <item>3 -4 năm </item>
        <item>5 - 7 năm</item>
        <item>7 - 10 năm</item>
        <item>Trên 10 năm</item>
    </string-array>
    <string-array name="list_salary">
        <item>theo thỏa thuận</item>
        <item>dưới 3triệu</item>
        <item>3 - 5triệu</item>
        <item>5 - 7triệu</item>
        <item>7 - 10triệu</item>
        <item>10 - 20triệu</item>
        <item>20 - 50triệu</item>
        <item>Trên 50triệu</item>
    </string-array>
    <string-array name="list_language">
        <item>Java</item>
        <item>PHP</item>
        <item>Python</item>
        <item>Cshap</item>
        <item>C/C++</item>
        <item>JavaScript</item>
        <item>Ruby</item>
        <item>Swift</item>
        <item>Android</item>
        <item>Tester</item>
    </string-array>
</resources>
